updated html page title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML & CSS Generator - Create Beautiful Landing Pages with AI</title>
+    <title>Onyx - Create Beautiful Landing Pages with AI</title>
     <meta name="description" content="Generate stunning, responsive HTML and CSS code for landing pages using AI. Perfect for developers, designers, and anyone who needs beautiful web pages fast.">
   </head>
   <body>
